--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,18 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "express": "^4.18.2",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.104.0"
+    "form-data": "^4.0.0",
+    "openai": "^4.0.0",
+    "sharp": "^0.33.0"
   },
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
