--- a/render-ocr.yaml
+++ b/render-ocr.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: paddleocr-korean-service   # 서비스 이름 (변경 가능)
+    name: paddleocr-korean-service
     env: python
-    plan: free                       # Free 플랜 (Starter 이상 선택 가능)
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python ocr_service.py
     envVars:
