--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "openai": "^5.20.1"
+    "openai": "^5.20.1",
+    "string-similarity": "^4.0.4"
   }
 }
