--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "diff-match-patch": "^1.0.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "openai": "^5.20.1",
